--- a/pwiz_tools/Skyline/SettingsUI/EditIsolationSchemeDlg.resx
+++ b/pwiz_tools/Skyline/SettingsUI/EditIsolationSchemeDlg.resx
@@ -117,8 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="modeUIHandler.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <metadata name="editIsolationWindowBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>244, 17</value>
+    <value>155, 17</value>
   </metadata>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="btnOk.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
@@ -151,7 +154,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btnOk.ZOrder" xml:space="preserve">
-    <value>22</value>
+    <value>16</value>
   </data>
   <data name="btnCancel.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -181,7 +184,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btnCancel.ZOrder" xml:space="preserve">
-    <value>21</value>
+    <value>15</value>
   </data>
   <data name="cbSpecifyMargin.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Bottom, Left</value>
@@ -240,120 +243,6 @@
   <data name="&gt;&gt;comboIsolation.ZOrder" xml:space="preserve">
     <value>3</value>
   </data>
-  <data name="labelDeconvPre.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Bottom, Left</value>
-  </data>
-  <data name="labelDeconvPre.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="labelDeconvPre.Enabled" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="labelDeconvPre.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="labelDeconvPre.Location" type="System.Drawing.Point, System.Drawing">
-    <value>31, 435</value>
-  </data>
-  <data name="labelDeconvPre.Size" type="System.Drawing.Size, System.Drawing">
-    <value>79, 13</value>
-  </data>
-  <data name="labelDeconvPre.TabIndex" type="System.Int32, mscorlib">
-    <value>15</value>
-  </data>
-  <data name="labelDeconvPre.Text" xml:space="preserve">
-    <value>D&amp;econvolution:</value>
-  </data>
-  <data name="&gt;&gt;labelDeconvPre.Name" xml:space="preserve">
-    <value>labelDeconvPre</value>
-  </data>
-  <data name="&gt;&gt;labelDeconvPre.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;labelDeconvPre.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;labelDeconvPre.ZOrder" xml:space="preserve">
-    <value>4</value>
-  </data>
-  <data name="comboDeconvPre.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Bottom, Left</value>
-  </data>
-  <data name="comboDeconvPre.Enabled" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="comboDeconvPre.Location" type="System.Drawing.Point, System.Drawing">
-    <value>34, 451</value>
-  </data>
-  <data name="comboDeconvPre.Size" type="System.Drawing.Size, System.Drawing">
-    <value>140, 21</value>
-  </data>
-  <data name="comboDeconvPre.TabIndex" type="System.Int32, mscorlib">
-    <value>16</value>
-  </data>
-  <data name="&gt;&gt;comboDeconvPre.Name" xml:space="preserve">
-    <value>comboDeconvPre</value>
-  </data>
-  <data name="&gt;&gt;comboDeconvPre.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;comboDeconvPre.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;comboDeconvPre.ZOrder" xml:space="preserve">
-    <value>5</value>
-  </data>
-  <data name="labelDeconvolution.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="labelDeconvolution.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="labelDeconvolution.Location" type="System.Drawing.Point, System.Drawing">
-    <value>229, 106</value>
-  </data>
-  <data name="labelDeconvolution.Size" type="System.Drawing.Size, System.Drawing">
-    <value>79, 13</value>
-  </data>
-  <data name="labelDeconvolution.TabIndex" type="System.Int32, mscorlib">
-    <value>7</value>
-  </data>
-  <data name="labelDeconvolution.Text" xml:space="preserve">
-    <value>&amp;Deconvolution:</value>
-  </data>
-  <data name="&gt;&gt;labelDeconvolution.Name" xml:space="preserve">
-    <value>labelDeconvolution</value>
-  </data>
-  <data name="&gt;&gt;labelDeconvolution.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;labelDeconvolution.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;labelDeconvolution.ZOrder" xml:space="preserve">
-    <value>6</value>
-  </data>
-  <data name="comboDeconv.Location" type="System.Drawing.Point, System.Drawing">
-    <value>232, 122</value>
-  </data>
-  <data name="comboDeconv.Size" type="System.Drawing.Size, System.Drawing">
-    <value>140, 21</value>
-  </data>
-  <data name="comboDeconv.TabIndex" type="System.Int32, mscorlib">
-    <value>8</value>
-  </data>
-  <data name="&gt;&gt;comboDeconv.Name" xml:space="preserve">
-    <value>comboDeconv</value>
-  </data>
-  <data name="&gt;&gt;comboDeconv.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;comboDeconv.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;comboDeconv.ZOrder" xml:space="preserve">
-    <value>7</value>
-  </data>
   <data name="btnCalculate.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
   </data>
@@ -385,7 +274,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btnCalculate.ZOrder" xml:space="preserve">
-    <value>8</value>
+    <value>4</value>
   </data>
   <data name="btnGraph.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -418,70 +307,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btnGraph.ZOrder" xml:space="preserve">
-    <value>9</value>
-  </data>
-  <data name="textWindowsPerScan.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Bottom, Left</value>
-  </data>
-  <data name="textWindowsPerScan.Enabled" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="textWindowsPerScan.Location" type="System.Drawing.Point, System.Drawing">
-    <value>34, 499</value>
-  </data>
-  <data name="textWindowsPerScan.Size" type="System.Drawing.Size, System.Drawing">
-    <value>39, 20</value>
-  </data>
-  <data name="textWindowsPerScan.TabIndex" type="System.Int32, mscorlib">
-    <value>18</value>
-  </data>
-  <data name="&gt;&gt;textWindowsPerScan.Name" xml:space="preserve">
-    <value>textWindowsPerScan</value>
-  </data>
-  <data name="&gt;&gt;textWindowsPerScan.Type" xml:space="preserve">
-    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;textWindowsPerScan.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;textWindowsPerScan.ZOrder" xml:space="preserve">
-    <value>10</value>
-  </data>
-  <data name="labelWindowsPerScan.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Bottom, Left</value>
-  </data>
-  <data name="labelWindowsPerScan.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="labelWindowsPerScan.Enabled" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="labelWindowsPerScan.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="labelWindowsPerScan.Location" type="System.Drawing.Point, System.Drawing">
-    <value>31, 483</value>
-  </data>
-  <data name="labelWindowsPerScan.Size" type="System.Drawing.Size, System.Drawing">
-    <value>98, 13</value>
-  </data>
-  <data name="labelWindowsPerScan.TabIndex" type="System.Int32, mscorlib">
-    <value>17</value>
-  </data>
-  <data name="labelWindowsPerScan.Text" xml:space="preserve">
-    <value>&amp;Windows per scan:</value>
-  </data>
-  <data name="&gt;&gt;labelWindowsPerScan.Name" xml:space="preserve">
-    <value>labelWindowsPerScan</value>
-  </data>
-  <data name="&gt;&gt;labelWindowsPerScan.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;labelWindowsPerScan.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;labelWindowsPerScan.ZOrder" xml:space="preserve">
-    <value>11</value>
+    <value>5</value>
   </data>
   <data name="cbSpecifyCERange.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Bottom, Left</value>
@@ -517,7 +343,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;cbSpecifyCERange.ZOrder" xml:space="preserve">
-    <value>12</value>
+    <value>6</value>
   </data>
   <data name="textName.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
@@ -541,7 +367,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;textName.ZOrder" xml:space="preserve">
-    <value>14</value>
+    <value>8</value>
   </data>
   <data name="label4.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -571,7 +397,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;label4.ZOrder" xml:space="preserve">
-    <value>15</value>
+    <value>9</value>
   </data>
   <data name="rbPrespecified.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -601,7 +427,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;rbPrespecified.ZOrder" xml:space="preserve">
-    <value>16</value>
+    <value>10</value>
   </data>
   <data name="labelTh.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -634,7 +460,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;labelTh.ZOrder" xml:space="preserve">
-    <value>17</value>
+    <value>11</value>
   </data>
   <data name="textPrecursorFilterMz.Location" type="System.Drawing.Point, System.Drawing">
     <value>34, 149</value>
@@ -655,7 +481,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;textPrecursorFilterMz.ZOrder" xml:space="preserve">
-    <value>18</value>
+    <value>12</value>
   </data>
   <data name="labelIsolationWidth.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -685,7 +511,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;labelIsolationWidth.ZOrder" xml:space="preserve">
-    <value>19</value>
+    <value>13</value>
   </data>
   <data name="rbUseResultsData.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -715,7 +541,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;rbUseResultsData.ZOrder" xml:space="preserve">
-    <value>20</value>
+    <value>14</value>
   </data>
   <data name="gridIsolationWindows.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Bottom, Left, Right</value>
@@ -778,13 +604,13 @@
     <value>gridIsolationWindows</value>
   </data>
   <data name="&gt;&gt;gridIsolationWindows.Type" xml:space="preserve">
-    <value>pwiz.Skyline.Controls.DataGridViewEx, Skyline, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+    <value>pwiz.Skyline.Controls.DataGridViewEx, Skyline-daily, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;gridIsolationWindows.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
   <data name="&gt;&gt;gridIsolationWindows.ZOrder" xml:space="preserve">
-    <value>13</value>
+    <value>7</value>
   </data>
   <data name="comboIsolationWidth.Location" type="System.Drawing.Point, System.Drawing">
     <value>34, 122</value>
@@ -858,6 +684,12 @@
   <data name="$this.Text" xml:space="preserve">
     <value>Edit Isolation Scheme</value>
   </data>
+  <data name="&gt;&gt;modeUIHandler.Name" xml:space="preserve">
+    <value>modeUIHandler</value>
+  </data>
+  <data name="&gt;&gt;modeUIHandler.Type" xml:space="preserve">
+    <value>pwiz.Skyline.Util.Helpers+ModeUIExtender, Skyline-daily, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+  </data>
   <data name="&gt;&gt;editIsolationWindowBindingSource.Name" xml:space="preserve">
     <value>editIsolationWindowBindingSource</value>
   </data>
@@ -904,6 +736,6 @@
     <value>EditIsolationSchemeDlg</value>
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>pwiz.Skyline.Util.FormEx, Skyline, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+    <value>pwiz.Skyline.Util.FormEx, Skyline-daily, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
   </data>
 </root>
