--- a/pwiz_tools/Skyline/SettingsUI/CalculateIsolationSchemeDlg.resx
+++ b/pwiz_tools/Skyline/SettingsUI/CalculateIsolationSchemeDlg.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="modeUIHandler.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="btnOk.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -148,7 +151,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btnOk.ZOrder" xml:space="preserve">
-    <value>20</value>
+    <value>16</value>
   </data>
   <data name="btnCancel.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -178,7 +181,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btnCancel.ZOrder" xml:space="preserve">
-    <value>19</value>
+    <value>15</value>
   </data>
   <data name="comboWindowType.Location" type="System.Drawing.Point, System.Drawing">
     <value>105, 75</value>
@@ -199,7 +202,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;comboWindowType.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>3</value>
   </data>
   <data name="labelWindowType.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -229,64 +232,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;labelWindowType.ZOrder" xml:space="preserve">
-    <value>5</value>
-  </data>
-  <data name="textWindowsPerScan.Enabled" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="textWindowsPerScan.Location" type="System.Drawing.Point, System.Drawing">
-    <value>195, 210</value>
-  </data>
-  <data name="textWindowsPerScan.Size" type="System.Drawing.Size, System.Drawing">
-    <value>39, 20</value>
-  </data>
-  <data name="textWindowsPerScan.TabIndex" type="System.Int32, mscorlib">
-    <value>17</value>
-  </data>
-  <data name="&gt;&gt;textWindowsPerScan.Name" xml:space="preserve">
-    <value>textWindowsPerScan</value>
-  </data>
-  <data name="&gt;&gt;textWindowsPerScan.Type" xml:space="preserve">
-    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;textWindowsPerScan.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;textWindowsPerScan.ZOrder" xml:space="preserve">
-    <value>6</value>
-  </data>
-  <data name="labelWindowsPerScan.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="labelWindowsPerScan.Enabled" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="labelWindowsPerScan.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="labelWindowsPerScan.Location" type="System.Drawing.Point, System.Drawing">
-    <value>192, 194</value>
-  </data>
-  <data name="labelWindowsPerScan.Size" type="System.Drawing.Size, System.Drawing">
-    <value>98, 13</value>
-  </data>
-  <data name="labelWindowsPerScan.TabIndex" type="System.Int32, mscorlib">
-    <value>16</value>
-  </data>
-  <data name="labelWindowsPerScan.Text" xml:space="preserve">
-    <value>Windows per sca&amp;n:</value>
-  </data>
-  <data name="&gt;&gt;labelWindowsPerScan.Name" xml:space="preserve">
-    <value>labelWindowsPerScan</value>
-  </data>
-  <data name="&gt;&gt;labelWindowsPerScan.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;labelWindowsPerScan.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;labelWindowsPerScan.ZOrder" xml:space="preserve">
-    <value>7</value>
+    <value>4</value>
   </data>
   <data name="labelWindowCount.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -313,7 +259,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;labelWindowCount.ZOrder" xml:space="preserve">
-    <value>8</value>
+    <value>5</value>
   </data>
   <data name="cbOptimizeWindowPlacement.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -343,37 +289,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;cbOptimizeWindowPlacement.ZOrder" xml:space="preserve">
-    <value>9</value>
-  </data>
-  <data name="label8.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="label8.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="label8.Location" type="System.Drawing.Point, System.Drawing">
-    <value>14, 194</value>
-  </data>
-  <data name="label8.Size" type="System.Drawing.Size, System.Drawing">
-    <value>79, 13</value>
-  </data>
-  <data name="label8.TabIndex" type="System.Int32, mscorlib">
-    <value>14</value>
-  </data>
-  <data name="label8.Text" xml:space="preserve">
-    <value>&amp;Deconvolution:</value>
-  </data>
-  <data name="&gt;&gt;label8.Name" xml:space="preserve">
-    <value>label8</value>
-  </data>
-  <data name="&gt;&gt;label8.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;label8.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;label8.ZOrder" xml:space="preserve">
-    <value>10</value>
+    <value>6</value>
   </data>
   <data name="textMargin.Location" type="System.Drawing.Point, System.Drawing">
     <value>15, 122</value>
@@ -394,7 +310,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;textMargin.ZOrder" xml:space="preserve">
-    <value>11</value>
+    <value>7</value>
   </data>
   <data name="label4.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -424,7 +340,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;label4.ZOrder" xml:space="preserve">
-    <value>12</value>
+    <value>8</value>
   </data>
   <data name="textWidth.Location" type="System.Drawing.Point, System.Drawing">
     <value>15, 75</value>
@@ -445,7 +361,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;textWidth.ZOrder" xml:space="preserve">
-    <value>13</value>
+    <value>9</value>
   </data>
   <data name="label3.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -475,7 +391,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;label3.ZOrder" xml:space="preserve">
-    <value>14</value>
+    <value>10</value>
   </data>
   <data name="textEnd.Location" type="System.Drawing.Point, System.Drawing">
     <value>105, 26</value>
@@ -496,7 +412,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;textEnd.ZOrder" xml:space="preserve">
-    <value>15</value>
+    <value>11</value>
   </data>
   <data name="label2.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -526,7 +442,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;label2.ZOrder" xml:space="preserve">
-    <value>16</value>
+    <value>12</value>
   </data>
   <data name="textStart.Location" type="System.Drawing.Point, System.Drawing">
     <value>15, 26</value>
@@ -547,7 +463,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;textStart.ZOrder" xml:space="preserve">
-    <value>17</value>
+    <value>13</value>
   </data>
   <data name="label1.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -577,28 +493,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;label1.ZOrder" xml:space="preserve">
-    <value>18</value>
-  </data>
-  <data name="comboDeconv.Location" type="System.Drawing.Point, System.Drawing">
-    <value>15, 210</value>
-  </data>
-  <data name="comboDeconv.Size" type="System.Drawing.Size, System.Drawing">
-    <value>145, 21</value>
-  </data>
-  <data name="comboDeconv.TabIndex" type="System.Int32, mscorlib">
-    <value>15</value>
-  </data>
-  <data name="&gt;&gt;comboDeconv.Name" xml:space="preserve">
-    <value>comboDeconv</value>
-  </data>
-  <data name="&gt;&gt;comboDeconv.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;comboDeconv.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;comboDeconv.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>14</value>
   </data>
   <data name="label6.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -1121,10 +1016,16 @@
   <data name="$this.Text" xml:space="preserve">
     <value>Calculate Isolation Scheme</value>
   </data>
+  <data name="&gt;&gt;modeUIHandler.Name" xml:space="preserve">
+    <value>modeUIHandler</value>
+  </data>
+  <data name="&gt;&gt;modeUIHandler.Type" xml:space="preserve">
+    <value>pwiz.Skyline.Util.Helpers+ModeUIExtender, Skyline-daily, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+  </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>CalculateIsolationSchemeDlg</value>
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>pwiz.Skyline.Util.FormEx, Skyline, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+    <value>pwiz.Skyline.Util.FormEx, Skyline-daily, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
   </data>
 </root>
